--- a/src/routes/lines/index.scss
+++ b/src/routes/lines/index.scss
@@ -79,7 +79,7 @@
     width: 100vw;
     text-align: center;
     background: $gradient-accent;
-    overflow-y: auto;
+    overflow-y: scroll;
     width: 100%;
     height: 100%;
     padding: 0;
@@ -97,6 +97,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100vw;
   }
 
   &-item {
